fix bug scrollbar

--- a/src/styles/components/_play.scss
+++ b/src/styles/components/_play.scss
@@ -142,7 +142,6 @@
     border: 1px solid lightcyan;
     padding: 5px;
     margin-top: 5px;
-    width: 60rem;
     height: 10rem;
     overflow: auto;
     box-shadow: 0 0.4rem 1.4rem 0 rgba(86, 185, 235, 0.5);
@@ -150,5 +149,10 @@
 }
 .hide{
     display: block;
+}
+
+.extra{
+    background-color: yellow;
+    font-size: 14px;
 }
 
